<resources>
    <string name="app_name">Emergencysavior</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="safe_walking">Safe Walking</string>
    <string name="walk_timer">Walk Timer</string>
    <string name="real_time_tracking">Real Time Tracking</string>
    <string name="crime_reporting">Crime Reporting</string>
    <string name="crime_Tracking">Crime Tracking</string>
    <string name="settings">Settings</string>


    <string name="Emergency_Event">Emergency Settings</string>
    <string name="Profile">Profile</string>
    <string name="Contacts">Contacts</string>
    <string name="User_Guide">User Guide</string>
    <string name="Emergency_event_History">Emergency Event History </string>


    <string name="flashlight">Flash light</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="Term_and_Conditions">Term and Conditions</string>
    <string name="Exit">Exit</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>
    <string name="label_send">Send</string>
    <string name="error_subtitle_failed_one_more_time">Please ensure mobile is connected to celluar data or wifi</string>
    <string name="error_title">No Internet Connectivity</string>
    <string name="info_retrying">Retrying</string>



    <string name="START_TRIP">START TRIP</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Source">Source</string>
    <string name="Destination">Destination</string>


    <!--//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>S E E S O M T H I N G H I N T  >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->



    <string name="txt_hint_type_activity_incident_behaviour">Type of Activity/Incident/behavior</string>
    <string name="txt_hint_what_happened">What happened?</string>
    <string name="txt_hint_when">When?</string>
    <string name="txt_hint_location">Location</string>
    <string name="txt_hint_country">Country</string>
    <string name="txt_hint_city">City</string>
    <string name="txt_hint_address">Address</string>

    <!--//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>S E E S O M T H I N G  B U T T O N T E X T >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
    <string name="txt_back">Back</string>
    <string name="txt__next">Next</string>
    <string name="txt__skip">Skip</string>
    <string name="txt__previous">Previous</string>
    <!--//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>S E E S O M T H I N G >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->
    <!--//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>B O T T O M  S H E E T >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->

    <string name="take_photo">Take Photo</string>
    <string name="Pick_From_Gallery">Pick From Gallery</string>
    <string name="Cancel">Cancel</string>
    <string name="Change_photo">Change photo</string>


    <!--//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>B O T T O M  S H E E T>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>-->

    <string-array name="CountryCodes">

        <item>Select Country Code</item>
        <item>1,USA</item>
        <item>1,CANADA</item>
        <item>52,MEXICO</item>
        <item>91,INDIA</item>



    </string-array>

    <string-array name="Typeofactivity">
        <item>Select Activity</item>

        <item>Incident</item>
        <item>Behavior</item>
        <item>Other</item>


    </string-array>


    <string-array name="Gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="usastate">
        <item>Select State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="vehicletype">

        <item>Select VehicleType</item>

        <item>Bike</item>
        <item>Car</item>
        <item>Jeep</item>
        <item>Van</item>
        <item>Bus</item>
        <item>Truck</item>

    </string-array>
    <string-array name="carmakecompany">

        <item>Select Make</item>
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Volvo</item>
        <item>Volkswagen</item>
        <item>Rolls-Royce</item>
        <item>Ford</item>
        <item>Hyundai</item>
        <item>Chevrolet</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Jaguar</item>

    </string-array>


    <string name="default_upload_website">http://emergencysavior.com/webapi/emx/updatelocation</string>
    <string name="tracking_is_off">Tracking is Off</string>
    <string name="tracking_is_on">Tracking is On</string>
    <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval.</string>
    <string name="reachability_error">Cannot reach the website that you have entered. Did you spell it correctly? Does your website use http or https?</string>
    <string name="textfields_empty_or_spaces">Please fill in both fields. User names cannot have a space.</string>
    <string name="google_play_services_unavailable">Please go into Settings > Apps > All and enable Google Play Services.</string>
    <string name="user_name">user name</string>
    <string name="upload_website">upload website</string>
    <string name="upload_frequency">Please select notification minutes:</string>
    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>


</resources>
